[package]
name = "generic-asset-primitives"
version = "0.1.0"
author = ["Kyli Bing <kylidboy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependicies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = [ "derive" ] }
sp-std = { package = "sp-std", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }
sp-runtime = { package = "sp-runtime", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
]