[package]
name = "p2p-rpc"
version = "0.1.0"
authors = ["Kyli Bing <kylidboy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0" }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "6ce091737dc7f114dd420f8b879f8a467c1d501b" }
p2p-rpc-runtime-api = { path = "./runtime-api" }
p2p-primitives = { path = "../primitives" }
serde = { version = "1.0.104", features = [ "derive" ] }
