[package]
name = "bridge"
version = "0.1.0"
authors = ["Definex Team"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "support/std",
    "primitives/std",
    "system/std",
    "sp-runtime/std",
    "runtime-io/std",
    "generic-asset/std",
    "sudo/std",
    "assets/std",
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.sudo]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.support]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-support"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.assets]
default-features = false
path = "../assets"
package = "assets"

[dependencies.generic-asset]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-generic-asset"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.system]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.sp-runtime]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-runtime"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dependencies.runtime-io]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-io"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dev-dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dev-dependencies.timestamp]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"


[dev-dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-balances"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

