[package]
name = "ls-biding"
version = "0.1.0"
authors = ["Definex Team"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "support/std",
    "system/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "timestamp/std",
    "generic-asset/std",
    "new-oracle/std",
]

[dependencies.sp-std]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.serde]
version = "1.0.104"
optional = true
features = [ "derive" ]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = '1.0.6'

[dependencies.support]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-support"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.system]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.sp-runtime]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-runtime"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.sp-io]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-io"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.generic-asset]
default_features = false
path = "../generic-asset"

[dependencies.new-oracle]
default_features = false
path = "../new-oracle"

[dependencies.timestamp]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.sp-core]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.node-primitives]
path = "../../../primitives"
default_features = false
package = "node-primitives"


[dev-dependencies]
sudo = { git = "https://github.com/paritytech/substrate.git", package = "pallet-sudo", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
balances = { git = "https://github.com/paritytech/substrate.git", package = "pallet-balances", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
sp-std = { git = "https://github.com/paritytech/substrate.git", package = "sp-std", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
sp-version = { git = "https://github.com/paritytech/substrate.git", package = "sp-version", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
system = { git = "https://github.com/paritytech/substrate.git", package = "frame-system", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
sp-core = { git = "https://github.com/paritytech/substrate.git", package = "sp-core", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
hex-literal = '0.2.1'
