[package]
name = "new-oracle"
version = "2.0.0"
authors = ["Definex Team"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "support/std",
    "system/std",
    "sp-runtime/std",
    "timestamp/std",
    "sp-io/std",
    "sp-core/std",
    "collective/std",
]

[dependencies.simple-json]
default-features = false
path = "/home/kyli/Codes/rust/github.com/kylidboy/simple-json"
version = "0.1"

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.support]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-support"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.system]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.timestamp]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.sp-runtime]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-runtime"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.sp-io]
default_features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-io"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies.collective]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-collective"
rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8"

[dependencies]
num-traits = { version = "0.2.8", default-features = false }
serde = { optional = true, version = "1.0" }
