[package]
name = "generic-asset-primitives"
version = "0.1.0"
author = ["Kyli Bing <kylidboy@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependicies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = [ "derive" ] }
sp-std = { package = "sp-std", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }
sp-runtime = { package = "sp-runtime", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "3bc3bb6b385f275e482935f82ae4b8ab5c0e00e8" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
]